[tool.poetry]
name = "itemio"
version = "0.7.2"
description = "Item input/output lib - Easy interaction between vanilla and custom containers"
authors = ["edayot <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/edayot/ItemIO"

[tool.poetry.dependencies]
python = "^3.10"
python-semantic-release = "^7.32.2"
smithed-libraries = {git = "https://github.com/edayot/Libraries.git"}
smithed= "0.13.2"
cryptography = "^41.0.3"
sphinx = "^7.1.1"
sphinx_design = "^0.5.0"
sphinx-pyproject = "^0.1.0"
sphinx-autobuild = "^2021.3.14"
pygments= "^2.15.1"
myst-parser = "^2.0.0"
sphinxcontrib-mermaid = "^0.7.1"
sphinx_copybutton = "^0.5.2"
furo = "^2023.7.26"
linkify-it-py = "^2.0.2"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "master"
major_on_zero = false
build_command = "python -m beet -p beet-release.yaml"
dist_path = "build"
upload_to_pypi = false
upload_to_release = true
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "beet.yaml:(?<=version: \")(\\d+\\.\\d+\\.\\d+)"
version_source = "commit"
remove_dist = false